Allow host arch to be automatically detected

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ ifdef BR_VERSION
 	TARCH    = $(BR_VERSION)-x86_64
 else
 	CXX    = g++
-	TARCH  = $(H_VERSION)-x86_64
+	TARCH  = $(HARCH)
 endif
 
 OBJDIR   = O.$(TARCH)
