Upgrade CPSW, link against tirpc on rhel9, use PACKAGE_SITE_TOP from env instead of an absolute path

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,14 +28,18 @@ TEST_TARGET = $(patsubst $(TESTDIR)/%.cpp, $(TESTBINDIR)/%, $(TESTSRCS))
 CXXFLAGS  = -g -std=c++0x -fPIC
 CXXFLAGS += $(addprefix -I,. $(CPSW_DIR)/include $(BOOST_DIR)/include $(YAML_CPP_DIR)/include) 
 
-LIBS_EXT = $(addprefix -l,$(LIB_NAME) cpsw yaml-cpp boost_system rt dl)
+LIBS_EXT = $(addprefix -l,$(LIB_NAME) cpsw yaml-cpp boost_system $(TIRPC_LIBS_$(WITH_TIRPC_$(TARCH))) rt dl)
 LIBS_SYS = -Wl,--whole-archive -lpthread -Wl,--no-whole-archive -lrt -ldl
 
 LDIR  = -L. 
 LDIR += -L$(CPSW_DIR)/lib
 LDIR += -L$(BOOST_DIR)/lib
 LDIR += -L$(YAML_CPP_DIR)/lib
+LDIR += -L$(TIRPC_DIR)/lib
 LDIR += -L$(LIBDIR)
+
+TIRPC_LIBS_YES = tirpc
+WITH_TIRPC_rhel9-x86_64 = YES
 
 .PHONY: all clean insatll uninstall
 
